[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selenium-python-example"
version = "0.1.0"
description = "Selenium Python example project with pytest and Allure report"
authors = [{ name = "Nir Tal", email = "nirt236@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "allure-pytest==2.13.5",
    "assertpy==1.1",
    "dataclasses-json==0.6.7",
    "deprecated==1.2.18",
    "mailinator-python-client-2==0.0.8",
    "mysql-connector-python==9.2.0",
    "pytest==8.3.5",
    "pytest-base-url==2.1.0",
    "pytest-check==2.5.2",
    "pytest-dependency==0.6.0",
    "pytest-ordering==0.6",
    "pytest-rerunfailures==15.0",
    "pytest-split==0.10.0",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "selenium==4.30.0",
    "tenacity==9.0.0",
    "visual-regression-tracker==4.9.0",
    "xlrd==2.0.1",
]

[project.urls]
Homepage = "https://github.com/nirtal85/Selenium-Python-Example"
Repository = "https://github.com/nirtal85/Selenium-Python-Example"

[dependency-groups]
dev = [
    "ruff==0.11.4",
    "pre-commit==4.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["ALL"]
ignore = [
    "D203",  # One blank line required before class docstring (conflicts with D211)
    "D213",  # Multi-line docstring summary should start at the second line
]
exclude = [".venv", "env"]

[tool.hatch.build.targets.sdist]
include = ["selenium_python_example"]

[tool.hatch.build.targets.wheel]
include = ["selenium_python_example"]

[tool.pytest.ini_options]
addopts = [
  "--clean-alluredir",
  "--alluredir=allure-results",
  "--allure-link-pattern",
  "issue:https://{}",
  "--allure-link-pattern",
  "link:https://{}",
  "--allure-link-pattern",
  "tms:https://{}",
  "--color=yes",
  "-s",
  "-p no:logging"
]
base_url = 'https://www.involve.me/'
markers = [
  "security: marks security tests",
  "devRun: marks tests that run before merge to the main branch"
]
testpaths = [
  "tests"
]