[dependency-groups]
dev = [
  "ruff==0.11.8",
  "pre-commit==4.2.0"
]

[project]
name = "selenium-python-example"
description = "Selenium Python example project with pytest and Allure report"
version = "0.1.0"
dependencies = [
  "allure-pytest==2.14.2",
  "assertpy==1.1",
  "dataclasses-json==0.6.7",
  "deprecated==1.2.18",
  "mailinator-python-client-2==0.0.8",
  "mysql-connector-python==9.3.0",
  "pytest==8.3.5",
  "pytest-base-url==2.1.0",
  "pytest-check==2.5.3",
  "pytest-dependency==0.6.0",
  "pytest-ordering==0.6",
  "pytest-rerunfailures==15.1",
  "pytest-split==0.10.0",
  "python-dotenv==1.1.0",
  "requests==2.32.3",
  "requests-toolbelt==1.0.0",
  "selenium==4.32.0",
  "tenacity==9.1.2",
  "visual-regression-tracker==4.9.0",
  "xlrd==2.0.1"
]
requires-python = "~=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
  "--clean-alluredir",
  "--alluredir=allure-results",
  "--allure-link-pattern",
  "issue:https://{}",
  "--allure-link-pattern",
  "link:https://{}",
  "--allure-link-pattern",
  "tms:https://{}",
  "--color=yes",
  "-s",
  "-p no:logging"
]
base_url = 'https://www.involve.me/'
markers = [
  "security: marks security tests",
  "devRun: marks tests that run before merge to the main branch"
]
testpaths = [
  "tests"
]

[tool.ruff]
exclude = [".venv", "env"]
ignore = [
  "D203",  # One blank line required before class docstring (conflicts with D211)
  "D213",  # Multi-line docstring summary should start at the second line
  "COM812"
]
line-length = 100
select = ["ALL"]
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
