[dependency-groups]
dev = [
  "ruff==0.14.3",
  "pre-commit==4.3.0"
]

[project]
name = "selenium-python-example"
description = "Selenium Python example project with pytest and Allure report"
version = "0.1.0"
dependencies = [
  "allure-pytest==2.15.0",
  "assertpy==1.1",
  "dataclasses-json==0.6.7",
  "deprecated==1.3.1",
  "mailinator-python-client-2==0.0.8",
  "mysql-connector-python==9.5.0",
  "pytest==8.4.2",
  "pytest-base-url==2.1.0",
  "pytest-check==2.6.0",
  "pytest-dependency==0.6.0",
  "pytest-ordering==0.6",
  "pytest-rerunfailures==16.1",
  "pytest-split==0.10.0",
  "python-dotenv==1.2.1",
  "requests==2.32.5",
  "requests-toolbelt==1.0.0",
  "selenium==4.38.0",
  "tenacity==9.1.2",
  "visual-regression-tracker==4.9.0",
  "xlrd==2.0.2"
]
requires-python = "~=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
  "--clean-alluredir",
  "--alluredir=allure-results",
  "--allure-link-pattern",
  "issue:https://{}",
  "--allure-link-pattern",
  "link:https://{}",
  "--allure-link-pattern",
  "tms:https://{}",
  "--color=yes",
  "-s",
  "-p no:logging"
]
base_url = 'https://www.involve.me/'
markers = [
  "security: marks security tests",
  "devRun: marks tests that run before merge to the main branch"
]
testpaths = [
  "tests"
]

[tool.ruff]
exclude = [".venv", "env"]
ignore = [
  "D203",  # One blank line required before class docstring (conflicts with D211)
  "D213",  # Multi-line docstring summary should start at the second line
  "COM812"
]
line-length = 100
select = ["ALL"]
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
